fix game instruction overlap of other cards

--- a/app/assets/stylesheets/places.css.scss
+++ b/app/assets/stylesheets/places.css.scss
@@ -2,7 +2,7 @@
   position: relative;
   min-width: 130%;
   margin-left: -16%;
-  height: 400px;
+  height: auto;
 }
 
 .game-card {
